Fixed color contrast issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,10 @@ p {
     font-size: 1.1em;
 }
 
+.input-field label {
+  color: rgba(0, 0, 0, 0.5);
+}
+
 main .row {
   margin-top: 2em;
 }
